@@ -16,8 +16,12 @@
             Parser parser = new Parser(System.Console.In, context);
             context.DefineVariable("write");
             context.SetValue("write", new WriteFunction());
+            context.DefineVariable("writeln");
+            context.SetValue("writeln", new WriteLineFunction());
             context.DefineVariable("Object");
             context.SetValue("Object", new ObjectFunction());
+
+            Console.WriteLine("AjScript 0.1 (JavaScript-like Interpreter in C#)");
 
             for (ICommand cmd = parser.ParseCommand(); cmd != null; cmd = parser.ParseCommand())
                 cmd.Execute(context);
