@@ -8,6 +8,7 @@
     using AjScript.Language;
     using AjScript.Compiler;
     using AjScript.Commands;
+    using AjScript.Expressions;
 
     [TestClass]
     public class EvaluationTests
@@ -21,44 +22,74 @@
         }
 
         [TestMethod]
+        public void AddSimpleExpression()
+        {
+            Assert.AreEqual(3, this.EvaluateExpression("1+2"));
+        }
+
+        [TestMethod]
+        public void ArithmeticSimpleExpressionWithPrecedence()
+        {
+            Assert.AreEqual(7, this.EvaluateExpression("1+2*3"));
+        }
+
+        [TestMethod]
+        public void ArithmeticSimpleExpressionWithParenthesis()
+        {
+            Assert.AreEqual(9, this.EvaluateExpression("(1+2)*3"));
+        }
+
+        [TestMethod]
+        public void GetNull()
+        {
+            Assert.IsNull(this.EvaluateExpression("null"));
+        }
+
+        [TestMethod]
+        public void GetUndefined()
+        {
+            Assert.AreSame(Undefined.Instance, this.EvaluateExpression("undefined"));
+        }
+
+        [TestMethod]
         public void EvaluateVar()
         {
-            Evaluate("var x;");
+            EvaluateCommands("var x;");
             Assert.AreEqual(Undefined.Instance, this.context.GetValue("x"));
         }
 
         [TestMethod]
         public void DefineVar()
         {
-            Evaluate("var x=1;");
+            EvaluateCommands("var x=1;");
             Assert.AreEqual(1, this.context.GetValue("x"));
         }
 
         [TestMethod]
         public void DefineVarWithInitialValue()
         {
-            Evaluate("var x=1+2;");
+            EvaluateCommands("var x=1+2;");
             Assert.AreEqual(3, this.context.GetValue("x"));
         }
 
         [TestMethod]
         public void DefineVarWithInitialExpressionValue()
         {
-            Evaluate("var x=1+2;");
+            EvaluateCommands("var x=1+2;");
             Assert.AreEqual(3, this.context.GetValue("x"));
         }
 
         [TestMethod]
         public void SetUndefinedVar()
         {
-            Evaluate("x = 1+2;");
+            EvaluateCommands("x = 1+2;");
             Assert.AreEqual(3, this.context.GetValue("x"));
         }
 
         [TestMethod]
         public void PreIncrementVar()
         {
-            Evaluate("var x = 0; y = ++x;");
+            EvaluateCommands("var x = 0; y = ++x;");
             Assert.AreEqual(1, this.context.GetValue("x"));
             Assert.AreEqual(1, this.context.GetValue("y"));
         }
@@ -66,7 +97,7 @@
         [TestMethod]
         public void PostIncrementVar()
         {
-            Evaluate("var x = 0; y = x++;");
+            EvaluateCommands("var x = 0; y = x++;");
             Assert.AreEqual(1, this.context.GetValue("x"));
             Assert.AreEqual(0, this.context.GetValue("y"));
         }
@@ -74,7 +105,7 @@
         [TestMethod]
         public void PreDecrementVar()
         {
-            Evaluate("var x = 0; y = --x;");
+            EvaluateCommands("var x = 0; y = --x;");
             Assert.AreEqual(-1, this.context.GetValue("x"));
             Assert.AreEqual(-1, this.context.GetValue("y"));
         }
@@ -82,7 +113,7 @@
         [TestMethod]
         public void PostDecrementVar()
         {
-            Evaluate("var x = 0; y = x--;");
+            EvaluateCommands("var x = 0; y = x--;");
             Assert.AreEqual(-1, this.context.GetValue("x"));
             Assert.AreEqual(0, this.context.GetValue("y"));
         }
@@ -90,7 +121,7 @@
         [TestMethod]
         public void SimpleFor()
         {
-            Evaluate("var y = 1; for (var x=1; x<4; x++) y = y*x;");
+            EvaluateCommands("var y = 1; for (var x=1; x<4; x++) y = y*x;");
             Assert.AreEqual(4, this.context.GetValue("x"));
             Assert.AreEqual(6, this.context.GetValue("y"));
         }
@@ -98,17 +129,25 @@
         [TestMethod]
         public void SimpleForWithBlock()
         {
-            Evaluate("var y = 1; for (var x=1; x<4; x++) { y = y*x; y = y*2; }");
+            EvaluateCommands("var y = 1; for (var x=1; x<4; x++) { y = y*x; y = y*2; }");
             Assert.AreEqual(4, this.context.GetValue("x"));
             Assert.AreEqual(48, this.context.GetValue("y"));
         }
 
-        private void Evaluate(string text)
+        private void EvaluateCommands(string text)
         {
             Parser parser = new Parser(text, this.context);
 
             for (ICommand cmd = parser.ParseCommand(); cmd != null; cmd = parser.ParseCommand())
                 cmd.Execute(this.context);
+        }
+
+        private object EvaluateExpression(string text)
+        {
+            Parser parser = new Parser(text, this.context);
+            IExpression expression = parser.ParseExpression();
+            Assert.IsNull(parser.ParseExpression());
+            return expression.Evaluate(this.context);
         }
     }
 }
